--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,8 +7,13 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "tsconfig": "*",
     "config": "*",
+    "tsconfig": "*",
     "typescript": "^4.5.3"
+  },
+  "dependencies": {
+    "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0"
   }
 }
